--- a/index.html
+++ b/index.html
@@ -1,69 +1,94 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
 <head>
-  <!-- A container for metadata(title,style,etc.) -->
-  <title>Fruits World</title> <!-- Declare the title -->
-  <style>
-    body {
-      background-color: black;
-    }
-
-    h1 {
-      font-family: fantasy;
-      color: white;
-      text-align: center;
-      font-size: 70px;
-
-    }
-
-    h2 {
-      font-family: Lucida Console;
-      font-size: 35px;
-      color: white;
-    }
-
-    p {
-      font-family: Arial;
-      font-size: 20px;
-      color: rgb(200, 200, 200);
-      text-align: left;
-    }
-  </style> <!-- Change the styles of colors, fonts, aligns -->
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>Ruoxi Wang</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:600,800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 
 <body>
-  <!-- Website's body -->
-  <div style="padding: 20px;">
-    <!-- Create a div block to format the contents in it -->
-    <h1>Fruits World</h1> <!-- Create a h1 title -->
-    <p>Inconspicuous motes of rock and gas across the centuries stirred by starlight venture encyclopaedia galactica made in the interiors of collapsing stars. Network of wormholes from which we spring muse about the sky calls to us Quis autem vel
-      eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur and billions upon billions upon billions upon billions
-      upon billions upon billions upon billions.</p> <!-- Create a paragraph -->
+
+  <div class="language" data-aos="fade-left">
+    <h5><a href="index.html" style="font-size: 3vmin; margin-right: 1vmin;" id="clickable">EN</a></h5>
+    <h5><a href="Chinese.html" style="color: grey;" id="clickable">中</a></h5>
   </div>
 
-  <div style="padding: 60px;" align="center">
-    <!-- Create a div block to format the contents in it -->
-    <h2><a href="https://en.wikipedia.org/wiki/BlackBerry">Blackberry</a></h2> <!-- Create a h2 title -->
-    <img src="https://images.pexels.com/photos/1122444/pexels-photo-1122444.jpeg?cs=srgb&dl=berries-bilberry-blackberry-1122444.jpg&fm=jpg" alt="Pic of Blackberry" width="500" height="333"> <!-- Add an image -->
-    <p>Ut posuere quam id elit pharetra, vel gravida felis facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus at metus elementum, feugiat metus sed, sodales tortor. Morbi vitae eleifend magna. Nam a nulla non nibh
-      interdum cursus luctus ac ante. Phasellus mauris diam, ullamcorper ac condimentum in, porta et elit. Ut nunc odio, luctus a risus quis, maximus porta sem. Morbi luctus lectus efficitur ultricies molestie. Maecenas vel turpis et sem placerat
-      feugiat. Etiam ut lorem vitae ligula tincidunt commodo at porta leo. Ut malesuada, urna ac rutrum efficitur, nibh ligula vestibulum ipsum, id feugiat diam massa sit amet justo.</p> <!-- Create a paragraph -->
-
-    <h2><a href="https://en.wikipedia.org/wiki/Cherry">Cherry</a></h2> <!-- Create a h2 title -->
-    <img src="https://images.pexels.com/photos/162689/cherry-pair-fruits-sweet-162689.jpeg?cs=srgb&dl=bright-cherries-close-up-162689.jpg&fm=jpg" alt="Pic of Cherry" width="500" height="333"> <!-- Add an image -->
-    <p>Etiam pretium dignissim bibendum. Vestibulum gravida justo vitae magna pulvinar eleifend eu in nisl. Cras bibendum ipsum nibh, id bibendum tellus cursus id. Vivamus ac felis justo. Fusce lectus risus, cursus nec erat ac, tincidunt pretium
-      libero. Curabitur in dui posuere magna volutpat ultrices sed vel libero. Quisque cursus massa et magna imperdiet commodo. Donec blandit tortor pellentesque lacus hendrerit commodo. Pellentesque efficitur maximus metus sed vehicula. Proin
-      elementum nulla ac varius viverra. Donec vel porta mauris, nec ultrices quam. Cras rhoncus nibh in diam consectetur luctus. Nam orci tellus, interdum et pellentesque et, feugiat quis nisi. Ut tempus diam finibus purus interdum, et lobortis quam
-      maximus.</p> <!-- Create a paragraph -->
-
-    <h2><a href="https://en.wikipedia.org/wiki/Orange_(fruit)">Orange</a></h2> <!-- Create a h2 title -->
-    <img src="https://images.pexels.com/photos/129574/pexels-photo-129574.jpeg?cs=srgb&dl=citrus-close-up-crop-129574.jpg&fm=jpg" alt="Pic of Cherry" width="500" height="333"> <!-- Add an image -->
-    <p>Etiam pretium dignissim bibendum. Vestibulum gravida justo vitae magna pulvinar eleifend eu in nisl. Cras bibendum ipsum nibh, id bibendum tellus cursus id. Vivamus ac felis justo. Fusce lectus risus, cursus nec erat ac, tincidunt pretium
-      libero. Curabitur in dui posuere magna volutpat ultrices sed vel libero. Quisque cursus massa et magna imperdiet commodo. Donec blandit tortor pellentesque lacus hendrerit commodo. Pellentesque efficitur maximus metus sed vehicula. Proin
-      elementum nulla ac varius viverra. Donec vel porta mauris, nec ultrices quam. Cras rhoncus nibh in diam consectetur luctus. Nam orci tellus, interdum et pellentesque et, feugiat quis nisi. Ut tempus diam finibus purus interdum, et lobortis quam
-      maximus.</p> <!-- Create a paragraph -->
+  <div class="name" data-aos="fade-down" data-aos-anchor=".introduction">
+    <h3>RUOXI WANG</h3>
   </div>
 
+  <div class="contact" data-aos="fade-left" data-aos-anchor=".introduction">
+    <a href="https://www.youtube.com/channel/UCoU7S_KNcopCwvoSNeByLbw/videos?view_as=subscriber" target="_blank" id="clickable"><i class="fab fa-youtube fa-2x icon-margin"></i></a>
+    <a href="https://soundcloud.com/ruoxiwang" target="_blank" id="clickable"><i class="fab fa-soundcloud fa-2x icon-margin"></i></a>
+    <a href="https://github.com/RosieWang930" target="_blank" id="clickable"><i class="fab fa-github fa-2x icon-margin"></i></a>
+    <a href="mailto: wang0930rx@gmail.com" target="_blank" id="clickable"><i class="far fa-envelope fa-2x icon-margin"></i></a>
+  </div>
+
+  <div class="backtotop" style="z-index: 100;position: fixed;left: 10vw; bottom: 9vh;"data-aos="fade-right" data-aos-anchor=".introduction">
+    <a href="javascript:" id="return-to-top"><i class="fas fa-chevron-circle-up fa-3x"></i></a>
+  </div>
+
+
+  <div class="mainContainer">
+    <article class="heroPage">
+      <h5 data-aos="fade-down" class="hello">Hello,<br>I am</h5>
+      <h2 data-aos="zoom-in" class="backgroundWord">RUOXI</h2>
+      <h2 data-aos="zoom-in" class="backgroundWord">WANG</h2>
+      <img data-aos="fade-up" src="me copy.png" alt="" class="heropic" data-aos="fade-up">
+      <h2 data-aos="fade-right" id="myname">RUOXI WANG</h2>
+      <h5 data-aos="fade-up" class="nyu">NYU Integrated Digital Media</h5>
+    </article>
+
+    <article class="introduction" data-aos="fade-up">
+      <h4>Hi there, I’m a student majoring in Integrated Digital Media at New York University. I wish to become a <span id="highlight">UX designer</span> based in New York in the future.​</h4>
+      <form method="get" action="Ruoxi_Wang_Resume.pdf" target="_blank" style="margin-top: 5vh;">
+        <button type="submit" id="clickable">
+          <h5>Resume</h5>
+        </button>
+      </form>
+    </article>
+
+    <div id="works"></div>
+
+    <form action="https://wang0930rx.wixsite.com/home" method="get" target="_blank" class="moreclassBtn">
+      <button type="submit" id="clickable" style="text-align:center;">
+        <h5>More Work</h5>
+      </button>
+      </form>
+
+    <p style="text-align: center;margin-top: 10vh;" class="footer" >@ 2019 by Ruoxi Wang</p>
+  </div>
+
+
+
+
+  <script src="script.js" charset="utf-8"></script>
+  <script src="sketch.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" charset="utf-8"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+
+  </script>
+  <script type="text/javascript">
+    $("#myname").hover(function() {
+      $(".heropic").show();
+    }, function() {
+      $(".heropic").hide();
+    });
+
+    $('#return-to-top').click(function() { // When arrow is clicked
+      $('body,html').animate({
+        scrollTop: 0 // Scroll to top of body
+      }, 300);
+    });
+  </script>
 </body>
 
 </html>
